--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
+<title>Pure Python web App</title>
 
-    <title>Pure Python web App</title>
 </head>
 <body>
-<h1>Hello</h1>
+<h1>Contact page </h1>
 
 </body>
 
